# geno-1

./: .gitignore  Cargo.toml  README.md  env.js  index.html  package-lock.json  package.json  server.js  web-test.js  worker.js  wrangler.toml
.cursor/rules/: project-rules.mdc  robs-rules.mdc
.githooks/: pre-push
.github/workflows/: ci.yml  web-ci.yml
.husky/: pre-commit
crates/app-core/: Cargo.toml
crates/app-core/shaders/: post.wgsl  scene.wgsl  waves.wgsl
crates/app-core/src/: constants.rs  lib.rs  music.rs  state.rs
crates/app-native/: Cargo.toml
crates/app-native/src/: main.rs
crates/app-web/: Cargo.toml  LICENSE  index.html
crates/app-web/src/: audio.rs  camera.rs  constants.rs  dom.rs  events.rs  frame.rs  input.rs  lib.rs  overlay.rs  render.rs  ui.rs
crates/app-web/src/core/: mod.rs  music.rs
crates/app-web/src/events/: keyboard.rs  mod.rs  pointer.rs
crates/app-web/src/render/: helpers.rs  post.rs  targets.rs  waves.rs
docs/: SPEC.md  TODO.md
docs/diagrams/: audio.md  visual.md
docs/media/: README.md
scripts/: wait-for-server.js
shaders/: post.wgsl  scene.wgsl  waves.wgsl
src/: audio.rs  constants.rs  frame.rs  input.rs  lib.rs  overlay.rs  render.rs
src/core/: constants.rs  mod.rs  music.rs  state.rs
src/events/: keyboard.rs  pointer.rs
src/render/: waves.rs
tests/: constants_tests.rs  input_tests.rs  keyboard_tests.rs  music_tests.rs
