[workspace]
members = ["crates/app-web"]
resolver = "2"

[workspace.package]
authors = ["Robert Gilks"]
edition = "2021"
license = "MIT"
version = "0.1.0"
description = "Generative 3D music visualizer using Rust, WebGPU (wgpu v24), and WebAudio"
repository = "https://github.com/rgilks/geno-1"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
console_log = { version = "1.0", features = ["color"] }
console_error_panic_hook = "0.1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
  "HtmlElement",
  "DomTokenList",
  "Element",
  "EventTarget",
  "MouseEvent",
  "PointerEvent",
  "KeyboardEvent",
  "CanvasRenderingContext2d",
  "DomRect",
  "AudioContext",
  "AudioDestinationNode",
  "AudioListener",
  "AnalyserNode",
  "OscillatorNode",
  "OscillatorType",
  "GainNode",
  "WaveShaperNode",
  "AudioNode",
  "AudioParam",
  "PannerNode",
  "PanningModelType",
  "DistanceModelType",
  "AudioBuffer",
  "ConvolverNode",
  "DelayNode",
  "BiquadFilterNode",
  "BiquadFilterType",
] }
rand = "0.8"
smallvec = "1.13"
fnv = "1.0"

glam = { version = "0.27", features = ["bytemuck"] }
bytemuck = { version = "1.16", features = ["derive"] }
instant = "0.1"

wgpu = { version = "24.0", features = ["webgpu"] }


[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
