[package]
name = "app-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Core music generation logic and shared state for geno-1"
repository = "https://github.com/rgilks/geno-1"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
smallvec = { workspace = true }
fnv = { workspace = true }

# math and time
glam = { workspace = true }
instant = { workspace = true }

# shared (no wasm-specific here)
bytemuck = { workspace = true }

[features]
default = []
