[package]
name = "app-native"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Native desktop front-end (winit + wgpu) for geno-1"
repository = "https://github.com/rgilks/geno-1"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
env_logger = "0.11"
pollster = "0.3"
app-core = { path = "../app-core" }
cpal = { workspace = true }
