[package]
name = "app-web"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
console_log = { workspace = true }
console_error_panic_hook = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
wgpu = "24.0"
winit = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
app-core = { path = "../app-core" }
getrandom = { version = "0.2", features = ["js"] }
instant = { version = "0.1" }

[features]
default = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
