[package]
name = "app-web"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Web front-end (WASM) using WebGPU and WebAudio for geno-1"
repository = "https://github.com/rgilks/geno-1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
console_log = { workspace = true }
console_error_panic_hook = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
wgpu = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
rand = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }
instant = { version = "0.1" }

[features]
default = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
